ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/search2.less
.header {
  .cmp-search {

    &__input {

      &:focus-visible {
        outline: 1px solid var(--border-common);
        background: var(--search-bg-active);
        color: var(--search-text-active);
      }
    }

    &__results {
      padding: 0.5rem 0;
      outline: 1px solid var(--border-common);
      border: none;

      &:empty {
        display: none !important;
      }
    }

    &__item {
      padding: 0.5rem;
      font-size: var(--body-font-size);
      line-height: var(--body-font-line-height);
      font-weight: 400;

      &:hover {
        background: var(--search-results-bg-hover);
      }
    }

    &__item-mark {
      background: transparent;
    }
  }
}
html#adobeguides-dark-contrast {
  .header {
    .cmp-search {
      &__item {
        color: var(--yellow-color);
        &:hover {
          background: var(--dark-grey);
        }
      }

      &__item-mark {
        background: transparent;
        color: var(--yellow-color);
      }

      &__input {
        &:focus-visible {
          outline: 1px solid var(--border-common);
          background: var(--search-bg);
          color: var(--search-text-active);
        }
      }
    }
  }
}

@media (max-width: 1023px) {
  .header {
    .cmp-search {
      position: absolute;
      top: 2rem;
      left: 0;
      right: 0;
      margin-top: 2rem;
      background: var(--common-bg);
      border: 1px solid var(--border-common);
      border-radius: 0 0 0.75rem 0.75rem;
      padding: 0.75rem 1rem 1rem;

      &__icon {
        left: 0;
        top: 0.35rem;
        width: 24px;
        height: 24px;
      }

      &__input {
        position: relative;
        margin-top: 0;
        left: unset;
        width: 100%;
        border-radius: 0.5rem;
        padding-left: 2rem;
        border: none;
        outline: none;
        box-shadow: none;

        &:focus-visible {
          outline: none;
        }
      }

      &__clear-icon {
        left: unset;
        top: 8px;
        right: 8px;
      }

      &__results {
        position: relative;
        left: auto;
        width: auto;
        margin-top: 0;
        padding-block: 0;
        border-radius: 0.5rem;
        border: none;
        box-shadow: none;
        outline: none;
      }

      &__item {
        padding-inline: 1rem;
      }
    }
  }
}

@media (min-width: 1024px) {
  .gu-header_search-container {
    .cmp-search {
      display: none;
      transition: transform 0.3s ease;

      &__icon {
        display: block;
        background-size: contain;
        width: 20px;
        height: 20px;
        pointer-events: none;
        left: 0.5rem;
        top: 0.375rem;
        margin-right: 0.5rem;
      }

      &__clear-icon {
        cursor: pointer;
        position: absolute;
        top: 7px;
        right: 12px;
        width: 20px;
        height: 20px;
        left: auto;
      }

      &__results {
        position: absolute;
        left: 0;
        min-width: 100%;
        margin-top: 0;
        padding: 0;
        border: 0;
        width: 100%;
        box-shadow: 0 8px 12px 0 var(--box-shadow-results);
        border-radius: 0 0 0.5rem 0.5rem;
        outline: none;
      }

      &__item {
        margin-bottom: 0;
        padding-left: 2.125rem;
      }
    }

    .cmp-search__input {
      background: var(--search-bg);
      box-shadow: 0 8px 12px 0 var(--box-shadow-search);
      display: block;
      height: 100%;
      width: 338px;
      color: var(--search-text-color);
      font-size: var(--body-font-size);
      font-weight: 500;
      line-height: var(--body-font-line-height);
      margin-top: 0;
      position: unset;
      padding: 0.25rem 0.5rem 0.25rem 2.125rem;

      &:focus-visible {
        outline: 1px solid var(--border-common);
        background: var(--search-bg-active);
        color: var(--search-text-active);
        border-radius: 0.5rem;
      }
    }

    .gu-search__toggle {
      border: none;
      background: none;
      cursor: pointer;
      padding: 0.75rem;
      height: 48px;
      width: 48px;
    }

    .gu-search__icon {
      width: 24px;
      height: 24px;
    }

    &.search-visible {
      .cmp-search {
        display: block;
      }

      .gu-search__container {
        display: none;
      }
    }
  }
}

.custom-search-container {
  margin-bottom: 0.7rem;
}

.col-9grid-container {
  padding: 0 16px;
}
@media (max-width: 480px) {
  html.adobeguides-text-size{
    .header .cmp-search__clear-icon {
      top: 0.4rem;
    }
    .header .cmp-search__icon{
      top: 0.4rem;
      left: 0.5rem;
    }
  }
}

